--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@prismicio/client": "^7.5.0",
     "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.4",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.40",
