--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prismicio/client": "^7.5.0",
     "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.4",
+    "@radix-ui/react-accordion": "^1.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.383.0",
