Add baseUrl and paths in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,10 @@
       "@/*": ["./src/*"]
     }
   },
+  "baseUrl": "src",
+  "paths": {
+    "@/app/components/*": ["app/components/*"]
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
